public/bootstrap/less/trp3.less
@import "bootstrap.less";

@import "trpColours.less";
@import "trpWebFonts.less";
@import "trpFonts.less";

@import "trpModals.less";

@import "trp3Common.less";

@import "trp3Chat.less";
@import "trp3Mail.less";
@import "trp3Files.less";

body {
	margin: 0;
	background-color: #ecf1ec;
	overflow-x: hidden;
}

div {
	display: inline-block;
}

a {
	text-decoration: none;
}

.view {
	display: block;
}

.trpLeftMenuHotspot {
	position: fixed;
	top: 0;
	left: 0;
	width: 40px;
	height: 100%;
	z-index: 10;
}

.trpLeftMenu {
	.trpH1;
	position: fixed;
	width: 280px;
	left: -280px;
	top: 0px;
	background-color: @trpGreen;
	height: 100%;
	overflow: hidden;
	color: white;
	z-index: 1012;
	border-right: 2px solid @trpGreen;
}

.trpMenuTab {
	position: fixed;
	left: 0px;
	top: 100px;
	background-color: @trpGreen;
	height: 40px;
	width: 40px;
}

.trpContentPanel {
	background-color: #ecf1ec;
	margin-left: 0px;
	height: 100%;
	text-align: center;
	padding-top: 40px;
}

.trpContentSpacer {
	width: 100%;
	min-width: 700px;
}

.trpHeaderWrapper {
	width: 100%;
	height: 60px;
	background-color: white;
	text-align: center;
	position: fixed;
	z-index: 1000;
}

.trpHeaderContainer {
	background-color: white;
	text-align: center;
}

.trpHeaderTitle {
	.trpH1;
	min-width: 500px;
	text-align: left;
	color: #333;
	padding-top: 14px;
}

.trpHeaderToolbar {
	min-width: 200px;
	height: 60px;
	vertical-align: top;
	text-align: left;
}

.trpSettingsButton {
	padding-top: 14px;
	border-top: 2px solid @trpGreen;
	margin: 0;
}

.trpProfileButton {
	padding-top: 14px;
	padding-left: 12px;
	border-top: 2px solid @trpGreen;
	margin: 0;
}

.trpProfileMenu {
	font-family: 'Open Sans';
	font-size: 14px;
	color: #333;
	vertical-align: top;
	display: inline-block;
	padding-top: 18px;
	border-top: 2px solid #1dce73;
	margin: 0;
	width: 0px;	
	overflow: hidden;
	white-space: nowrap;
}

.trpProfileItem {
	padding-left: 14px;
}

.trpProfileItem a:hover {
	color: #1dce73;
}

.trpProfileItem a {
	color: #333;
}

.trpDisplayPictureSmall {
	border-radius: 50em;
	width: 24px;
	height: 24px;
	background-size: contain;
}

.trpChatPanel {
	min-width: 500px;
	max-width: 500px;
	height: 100%;
	text-align: left;
	padding-top: 40px;
	border-radius: 5px;
}

.trpToolbar {
	min-width: 200px;
	max-width: 200px;
	height: 100%;
	text-align: left;
	padding-top: 40px;
	vertical-align: top;

}

.trpToolbarHeader {
	font-family: 'Open Sans';
	font-size: 12px;
	text-transform: uppercase;
	padding-top: 12px;
	padding-bottom: 4px;
}

.trpRightPanel {
	position: absolute;
	width: 280px;
	right: -280px;
	top: 60px;
	height: 100%;
	overflow: hidden;
	color: white;
	font-size: 20px;
	z-index: 12;
	background-color: #ecf1ec;
	padding-top: 40px;
	display: none;
	text-align: left;
}

